# bsc-thesis

./: .gitignore  BA-Fragen 10.4.  exposee  graph2ned.py
DarknetSim/: .cproject  .project  BA-Fragen 10.4.  CMakeLists.txt  README.cmake  makeinc2cmakeconf.py
DarknetSim/cmake/: GenerateOMNeT++Config.cmake  GenerateOMNeT++INETConfig.cmake  OMNeT++Macros.cmake
DarknetSim/cmake/util/: geninetconf.sh  makeinc2cmakeconf.py
DarknetSim/simulations/: package.ned
DarknetSim/src/: CMakeLists.txt  DarknetBaseNode.cc  DarknetBaseNode.h  DarknetBaseNode.ned  DarknetSim  HotPotatoTest1.ned  HotpotatoNode.cc  HotpotatoNode.h  HotpotatoNode.ned  Makefile  darknetmessage.msg  darknetmessage_m.cc  darknetmessage_m.h  omnetpp.ini  omnetpp.ini.in
DarknetSim/src/messages/: DarknetMessage.cc  DarknetMessage.h
darknet-hotpotato/: .cproject  .project
darknet-hotpotato/simulations/: package.ned  run
darknet-hotpotato/src/: HotpotatoNode.cc  HotpotatoNode.h  HotpotatoNode.ned  Makefile  hotpotTest.ned  omnetpp.ini  package.ned
darknetsim/: .cproject  .project
darknetsim/simulations/: run
darknetsim/src/: DarknetBaseNode.cc  DarknetBaseNode.h  DarknetBaseNode.ned  Makefile  darknetsim  package.ned
darknetsim/src/messages/: DarknetMessage.h  MaintenanceMessage.cc  MaintenanceMessage.h
